# yolo-6d

./: .gitignore  LICENSE  README.md  inference.py  main.py  pyproject.toml  train.py
configs/: yolo6d_default.yaml
data/: dataset.py
model/: E_ELAN.py  FPN_PAN.py
models/: yolo6d.py
models/backbone/: e_elan.py
models/head/: yolo6d_head.py
models/neck/: fpn_pan.py
utils/: general.py  geometry.py  loss.py  visualization.py
